--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id 'com.adarshr.test-logger' version '3.2.0'
+    id "com.github.mrsarm.jshell.plugin" version "1.2.1"
 }
 
 application {
@@ -29,9 +30,6 @@ dependencies {
     implementation group: 'org.jacoco', name: 'jacoco-maven-plugin', version: '0.8.10'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.2'
 
-    //required by project : > org.jacoco:jacoco-maven-plugin:0.8.10,
-    // иначе ошибка > Could not resolve all files for configuration ':compileClasspath'.
-    //   > Could not find org.apache.maven.reporting:maven-reporting-api:${project.prerequisites.maven}.
     //     Required by:
     //         project : > org.jacoco:jacoco-maven-plugin:0.8.10
     implementation group: 'org.apache.maven.reporting', name: 'maven-reporting-api', version: '4.0.0-M7'
